--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,14 @@
 
     <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 <script>
-  mermaid.initialize({startOnLoad:true});
+  mermaid.initialize({
+  startOnLoad: true,
+  theme: 'default',
+  flowchart: {
+    useMaxWidth: false,
+    htmlLabels: true
+  }
+});
 </script>
 
     
