--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
+    </style>
   </head>
   <body>
     <div id="header">
