--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             padding: 20px;
         }
         .mermaid {
-            background-color: #f9f9f9;
+            background-color: #727272;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
